# mcp-example

./: Dockerfile  client.py  deployment.yaml  pyproject.toml  server.py
.gemini/: settings.json
